--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
     /* Slider konteyneri */
     .slider {
         width: 100%;
-        height: 300px;
+        height: 240px;
         overflow: hidden;
         position: relative;
         display: flex;
@@ -237,7 +237,7 @@
                                                 </a>
                                             </li>
                                             <li class="add_links">
-                                                <a href="/productdetail/{{ product.id }}/" title="Add to Wishlist">
+                                                <a href="/product/detail/{{ product.id }}/" title="Add to Wishlist">
                                                     <i class="ion-ios-eye"></i>
                                                 </a>
                                             </li>
@@ -438,41 +438,41 @@
 <div class="single_product_wrapper product_slider">
     <div class="container">
         <div class="row">
-            <h4 style="color: black;">Популярные бренды (маркетинг)</h4>
-            <div class="product_gallery_active owl-carousel" style="margin: 0px !important;">
+            <h4 style="color: black;">Популярные бренды</h4>
+            <div class="product_gallery_active owl-carousel" style="margin: 0px !important; flex: 0 0 calc(50% - 12px); gap: 0px !important;">
                 <div class="col-lg-3">
                     <div class="single_product_gallery">
-                        <img src="../static/assets/img3/80.png" alt="">
+                        <img src="../static/assets/rasm/Abbott.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="single_product_gallery">
-                        <img src="../static/assets/img3/cs.png" alt="">
+                        <img src="../static/assets/rasm/Bayer.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="single_product_gallery">
-                        <img src="../static/assets/img3/nutrica.png" alt="">
+                        <img src="../static/assets/rasm/Dr.reddys.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="single_product_gallery">
-                        <img src="../static/assets/img3/omron.png" alt="">
+                        <img src="../static/assets/rasm/Farmak.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="single_product_gallery">
-                        <img src="../static/assets/img3/pg.png" alt="">
+                        <img src="../static/assets/rasm/KRKA.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-3" style="width: 50px !important;">
                     <div class="single_product_gallery">
-                        <img src="../static/assets/img3/logo02-removebg-preview.png" alt="">
+                        <img src="../static/assets/rasm/Sandoz.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="single_product_gallery">
-                        <img src="../static/assets/img3/stada.png" alt="">
+                        <img src="../static/assets/rasm/SANOFI.png" alt="">
                     </div>
                 </div>
             </div>
@@ -508,6 +508,39 @@
                             <p>Причины, симптомы и эффективные способы лечения.
                             </p>
                         </div>
+                        <a href="/auth/blog/" class="tugma22"><button class="button22">Batafsil</button></a>
+                        <style>
+                            .tugma22 {
+  text-decoration: none; /* underline yo'q qilinadi */
+}
+
+.button22 {
+  background-color: #0960e2; /* Yashil rang */
+  color: white;
+  border: none;
+  padding: 10px 35px;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 500;
+}
+@media (max-width: 600px) {
+  .button22 {
+    padding: 8px 25px;
+    font-size: 14px;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 400px) {
+  .button22 {
+    padding: 6px 20px;
+    font-size: 13px;
+  }
+}
+
+
+                        </style>
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -521,6 +554,8 @@
                             <a>25.022025</a>
                             <p> Иммунная система – это главный защитник организма от вирусов и инфекций.
                             </p>
+                            <a href="/auth/blog/" class="tugma22"><button class="button22">Batafsil</button></a>
+
                         </div>
                     </div>
                 </div>
@@ -535,6 +570,8 @@
                             <a href="#">23.02.2025</a>
                             <p>После болезни организм ослаблен и нуждается в правильном восстановлении.
                             </p>
+                            <a href="/auth/blog/" class="tugma22"><button class="button22">Batafsil</button></a>
+
                         </div>
                     </div>
                 </div>
@@ -549,6 +586,8 @@
                             <a href="#">22.02.2025</a>
                             <p>Здоровая, сияющая кожа — мечта каждого. Но ежедневные стрессы.
                             </p>
+                            <a href="/auth/blog/" class="tugma22"><button class="button22">Batafsil</button></a>
+
                         </div>
                     </div>
                 </div>
@@ -592,8 +631,8 @@
     .close-btn {
         position: absolute;
         top: 15px;
-        right: 25px;
-        font-size: 28px;
+        right: 810px;
+        font-size: 32px;
         color: #333;
         cursor: pointer;
     }
@@ -634,6 +673,7 @@
 
     @media screen and (max-width: 480px) {
         .text-modal-content {
+            margin-top: 100px;
             width: 90%;
             max-width: 100%;
             padding: 15px 25px;
@@ -645,8 +685,8 @@
         }
 
         .close-btn {
-            top: 5px;
-            right: 15px;
+            top: 0px !important;
+            right: 365px !important;
             font-size: 20px;
             /* Even smaller close button */
         }
@@ -975,7 +1015,7 @@
 <!-- matinlar tugatildi -->
 
 <!-- reklama- boshland -->
-
+<br><br>
 <div class="container22">
     <div class="box1">
         <span>ГАРАНТИЯ КАЧЕСТВА</span>
@@ -988,7 +1028,7 @@
         <img src="../static/assets/img/Условия доставки.jpeg" alt="Image 2">
     </div>
 </div>
-
+<br><br><br><br>
 <script>
     function showTextModal5() {
         document.getElementById("textModal5").style.display = "block";
