--- a/templates/new/oferta.html
+++ b/templates/new/oferta.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,8 +8,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ДОГОВОР ПУБЛИЧНОЙ ОФЕРТЫ</title>
 </head>
+<style>
+    .tugma22 {
+  text-decoration: none;
+}
 
+.button22 {
+  background-color: red; /* Qizil rang */
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.button22:hover {
+  background-color: #c0392b; /* Qizilni qoraroq qilish */
+}
+
+/* Kichik ekranlar (masalan, mobil qurilmalar) uchun */
+@media (max-width: 600px) {
+  .button22 {
+    padding: 8px 15px;
+    font-size: 14px;
+    margin-bottom: 20px !important;
+  }
+}
+
+/* O'rtacha ekranlar (masalan, planshetlar) uchun */
+@media (max-width: 768px) {
+  .button22 {
+    padding: 10px 18px;
+    font-size: 15px;
+  }
+}
+
+</style>
 <body>
+
+    <a href="/" class="tugma22"><button class="button22">Back</button></a>
+
     <section class="matinlars">
         <div class="container-1">
             <h2>1. ОБЩИЕ ПОЛОЖЕНИЯ</h2>
@@ -110,8 +152,6 @@
                 E-mail: info.akmalfarmmed@gmail.com</p>
         </div>
     </section>
-
-
 
     <style>
         @font-face {
