--- a/templates/product-create.html
+++ b/templates/product-create.html
@@ -43,14 +43,14 @@
                                 <label for="formFile" class="form-label" >Images-1</label>
                                 <input class="form-control" name="img_1" type="file" id="formFile" required>
                             </div>
-                            <div class="mb-3">
+                            {% comment %} <div class="mb-3">
                                 <label for="formFile" class="form-label">Images-2</label>
                                 <input class="form-control" name="img_2" type="file" id="formFile">
                             </div>
                             <div class="mb-3">
                                 <label for="formFile" class="form-label">Images-3</label>
                                 <input class="form-control" name="img_3" type="file" id="formFile">
-                            </div>
+                            </div> {% endcomment %}
                             <div class="d-flex justify-content-between">
                                 <button type="button" class="btn btn-danger" id="resetBtn">Bekor qilish</button>
                                 <button type="submit" class="btn btn-success">Yaratish</button>
