--- a/templates/product-details.html
+++ b/templates/product-details.html
@@ -707,7 +707,7 @@
             <p class="">{{ product.ReleaseForm }} </p>
             <p class="">{{ product.ExpDate }} </p>
             <p class="">{{ product.producer }} </p>
-            <p class="">{{ product.class }} </p>
+            <p class="">Class {{ product.class }} </p>
             {% if product.price > 0 %}
             <p class="price">{{ product.price }} So'm</p>
             
