--- a/templates/index.html
+++ b/templates/index.html
@@ -197,7 +197,7 @@
                                         </a>
                                     </div>
                                     <div class="product_content">
-                                        <h3>{{ product.name }}</h3>
+                                        <a href="/product/detail/{{ product.id }}"> <h3>{{ product.name }}</h3></a>
                                         <div>
                                             <br>
                                             <span>{{ product.producer }}</span><br>
