--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -257,7 +257,7 @@ a{
 	height: auto;
 	min-height: 22px;
 	line-height: 22px;
-	background: #dc4444;
+	background: #c51f30;
 	border-radius: 100%;
 	color: #ffffff;
 	font-size: 10px;
