--- a/templates/new/onas.html
+++ b/templates/new/onas.html
@@ -8,12 +8,20 @@
     <title>Akmal Farm Medical</title>
 </head>
 <style>
+      .alh3 {
+            color: white;
+            background-color: #002d5c;
+            width: 100%;
+            text-align: center;
+            align-items: center;
+            height: 40px;
+        }
     .tugma22 {
   text-decoration: none;
 }
 
 .button22 {
-  background-color: red; /* Qizil rang */
+  background-color: #c51f30; /* Qizil rang */
   color: white;
   border: none;
   padding: 10px 20px;
@@ -49,7 +57,7 @@
     <a href="/" class="tugma22"><button class="button22">Back</button></a>
 
     <div class="alls">
-        <img src="{% static 'assets/img2/labaratoriya.jpg'%}" alt="kutib turing" class="allimg">
+        <!-- <img src="{% static 'assets/img2/labaratoriya.jpg'%}" alt="kutib turing" class="allimg"> -->
         <h3 class="alh3">
             О компании
 
