--- a/templates/index.html
+++ b/templates/index.html
@@ -39,62 +39,64 @@
         <div class="tab-content">
             <div class="tab-pane fade show active" id="Products" role="tabpanel">
                 {% for group in data %}
-    <h4 style="margin-top: 30px;">{{ group.class_name }}</h4>
-    <div class="row">
-        <div class="product_active owl-carousel">
-            {% for product in group.products %}
-                    <div class="col-lg-3" style="height: auto;">
-                        <div class="single_product">
-                            <div class="product_thumb">
-                                <a href="/product/detail/{{ product.id }}" style="margin: 0px !important;">
-                                    <img src="{{ product.image1 }}" alt="" style="margin: 0px !important;">
-                                </a>
-                            </div>
-                            <div class="product_content">
-                                <a href="/product/detail/{{ product.id }}"> <h3>{{ product.name }}</h3></a>
-                                <div>
-                                    <br>
-                                    <span>{{ product.producer }}</span><br>
+                <h4 style="margin-top: 30px;">{{ group.class_name }}</h4>
+                <div class="row">
+                    <div class="product_active owl-carousel">
+                        {% for product in group.products %}
+                        <div class="col-lg-3" style="height: auto;">
+                            <div class="single_product">
+                                <div class="product_thumb">
+                                    <a href="/product/detail/{{ product.id }}" style="margin: 0px !important;">
+                                        <img src="{{ product.image1 }}" alt="" style="margin: 0px !important;">
+                                    </a>
                                 </div>
-                                <div class="product_price">
-                                    <br>
-                                    <span class="current_price">{{ product.prices.0 }} so'm</span><br>
-                                </div>
-                                <div class="product_action">
-                                    <ul style="display: flex; justify-content: center; align-items: center;">
-                                        {% if user.is_authenticated %}
-                                        <li class="product_cart" style="margin-right: 10px;">
-                                            <a onclick="addToCart({{ product.id }})">корзина</a>
-                                        </li>
-                                        {% else %}
-                                        <li class="product_cart" style="margin-right: 10px;">
-                                            <a href="/auth/send-otp/">корзина</a>
-                                        </li>
-                                        {% endif %}
-                                        <li class="add_links">
-                                            <a href="/toggle/{{ product.id }}/" title="Add to Wishlist">
-                                                <i class="ion-ios-heart-outline"></i>
-                                            </a>
-                                        </li>
-                                        <li class="add_links">
-                                            <a href="/product/detail/{{ product.id }}/" title="Add to Wishlist">
-                                                <i class="ion-ios-eye"></i>
-                                            </a>
-                                        </li>
-                                    </ul>
+                                <div class="product_content">
+                                    <a href="/product/detail/{{ product.id }}">
+                                        <h3>{{ product.name }}</h3>
+                                    </a>
+                                    <div>
+                                        <br>
+                                        <span>{{ product.producer }}</span><br>
+                                    </div>
+                                    <div class="product_price">
+                                        <br>
+                                        <span class="current_price">{{ product.prices.0 }} so'm</span><br>
+                                    </div>
+                                    <div class="product_action">
+                                        <ul style="display: flex; justify-content: center; align-items: center;">
+                                            {% if user.is_authenticated %}
+                                            <li class="product_cart" style="margin-right: 10px;">
+                                                <a onclick="addToCart({{ product.id }})">корзина</a>
+                                            </li>
+                                            {% else %}
+                                            <li class="product_cart" style="margin-right: 10px;">
+                                                <a href="/auth/send-otp/">корзина</a>
+                                            </li>
+                                            {% endif %}
+                                            <li class="add_links">
+                                                <a href="/toggle/{{ product.id }}/" title="Add to Wishlist">
+                                                    <i class="ion-ios-heart-outline"></i>
+                                                </a>
+                                            </li>
+                                            <li class="add_links">
+                                                <a href="/product/detail/{{ product.id }}/" title="Add to Wishlist">
+                                                    <i class="ion-ios-eye"></i>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
-            {% endfor %}
-        </div>
-    </div>
-{% endfor %}
+                        {% endfor %}
+                    </div>
+                </div>
+                {% endfor %}
 
             </div>
         </div>
-        
+
     </div>
 </div>
 <!-- 1-tugadi -->
@@ -105,7 +107,8 @@
     <div class="container">
         <div class="row">
             <h4 style="color: black;">Популярные бренды</h4>
-            <div class="product_gallery_active owl-carousel" style="margin: 0px !important; flex: 0 0 calc(50% - 12px); gap: 0px !important;">
+            <div class="product_gallery_active owl-carousel"
+                style="margin: 0px !important; flex: 0 0 calc(50% - 12px); gap: 0px !important;">
                 <div class="col-lg-3">
                     <div class="single_product_gallery">
                         <img src="../static/assets/rasm/Abbott.png" alt="">
@@ -149,18 +152,20 @@
 
 
 <!-- haqimizda bohshlandi -->
-<div class="blog_area">
+<div class="blog_area" id="Blog">
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="blog_header_title">
-                    <h4 style="color: black;">Новости и статьи</h4>
+                    <a href="/auth/blog/">
+                        <h4 style="color: black;">Новости и статьи</h4>
+                    </a>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="blog_active owl-carousel" style=" flex: 0 0 calc(80% - 16px); padding: 0px !important;">
-              
+
                 <div class="col-lg-4">
                     <div class="single_blog">
                         <div class="blog_thumb">
@@ -174,8 +179,8 @@
                             <p>Причины, симптомы и эффективные способы лечения.
                             </p>
                         </div>
-                        <a href="/auth/blog/" class="tugma22"><button class="button22">Batafsil</button></a>
-                
+                        <a href="/auth/blog/" class="tugma22"><button class="button22">Подробно</button></a>
+
 
                     </div>
                 </div>
@@ -190,7 +195,7 @@
                             <a>25.022025</a>
                             <p> Иммунная система – это главный защитник организма от вирусов и инфекций.
                             </p>
-                            <a href="/auth/blog/" class="tugma22"><button class="button22">Batafsil</button></a>
+                            <a href="/auth/blog/" class="tugma22"><button class="button22">Подробно</button></a>
 
                         </div>
                     </div>
@@ -206,7 +211,7 @@
                             <a href="#">23.02.2025</a>
                             <p>После болезни организм ослаблен и нуждается в правильном восстановлении.
                             </p>
-                            <a href="/auth/blog/" class="tugma22"><button class="button22">Batafsil</button></a>
+                            <a href="/auth/blog/" class="tugma22"><button class="button22">Подробно</button></a>
 
                         </div>
                     </div>
@@ -222,7 +227,7 @@
                             <a href="#">22.02.2025</a>
                             <p>Здоровая, сияющая кожа — мечта каждого. Но ежедневные стрессы.
                             </p>
-                            <a href="/auth/blog/" class="tugma22"><button class="button22">Batafsil</button></a>
+                            <a href="/auth/blog/" class="tugma22"><button class="button22">Подробно</button></a>
 
                         </div>
                     </div>
@@ -439,7 +444,7 @@
 
 <div class="matin">
     <h4 class="a2">Интернет-аптека "Akmal Farm Medical"</h4><br>
-    <p>Добро пожаловать в интернет-аптеку "Akmal Farm Medical"! <br> Здесь и во всех наших филиалах вы найдёте всё
+    <p clas>Добро пожаловать в интернет-аптеку "Akmal Farm Medical"! <br> Здесь и во всех наших филиалах вы найдёте всё
         необходимое для заботы о своём здоровье. Мы используем современные технологии, <br> а также всегда рады
         покупателям
         Вас ждёт быстрое обслуживание, широкий ассортимент, комфорт и удобство. <br> И при этом главная
@@ -551,7 +556,7 @@
 
 
 <script>
-   
+
 
     function addToCart(productId) {
         fetch(`/add_to_cart/${productId}/`, {
@@ -562,17 +567,17 @@
             },
             body: JSON.stringify({})
         })
-        .then(response => response.json())
-        .then(data => {
-            document.getElementById("cart_items_fetch").innerText = data.cart_count;
-            document.getElementById("cart_total_id").innerText = data.cart_total;
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById("cart_items_fetch").innerText = data.cart_count;
+                document.getElementById("cart_total_id").innerText = data.cart_total;
 
-        })
-        .catch(error => {
-           // console.error("Xatolik yuz berdi:", error);
-        });
+            })
+            .catch(error => {
+                // console.error("Xatolik yuz berdi:", error);
+            });
     }
-    </script>
+</script>
 
 <!-- reklama tugatilid -->
 {% endblock content %}
