--- a/templates/new/arendatelm.html
+++ b/templates/new/arendatelm.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="alls">
-        <img src="../static/assets/img2/001.jpg" alt="kutib turing" class="allimg">
+        <!-- <img src="../static/assets/img2/001.jpg" alt="kutib turing" class="allimg"> -->
         <h3 class="alh3">
             Интернет-аптека "Akmal Farm Medical"
         </h3>
