--- a/templates/new/farmaset.html
+++ b/templates/new/farmaset.html
@@ -9,71 +9,101 @@
 </head>
 <style>
     .tugma22 {
-  text-decoration: none;
-}
+        text-decoration: none;
+    }
 
-.button22 {
-  background-color: red; /* Qizil rang */
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.3s ease;
-}
+    .button22 {
+        background-color: #c51f30;
+        /* Qizil rang */
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 16px;
+        transition: background-color 0.3s ease;
+    }
 
-.button22:hover {
-  background-color: #c0392b; /* Qizilni qoraroq qilish */
-}
+    .button22:hover {
+        background-color: #c0392b;
+        /* Qizilni qoraroq qilish */
+    }
 
-/* Kichik ekranlar (masalan, mobil qurilmalar) uchun */
-@media (max-width: 600px) {
-  .button22 {
-    padding: 8px 15px;
-    font-size: 14px;
-    margin-bottom: 20px !important;
-  }
-}
+    /* Kichik ekranlar (masalan, mobil qurilmalar) uchun */
+    @media (max-width: 600px) {
+        .button22 {
+            padding: 8px 15px;
+            font-size: 14px;
+            margin-bottom: 20px !important;
+        }
+    }
 
-/* O'rtacha ekranlar (masalan, planshetlar) uchun */
-@media (max-width: 768px) {
-  .button22 {
-    padding: 10px 18px;
-    font-size: 15px;
-  }
-}
-
+    /* O'rtacha ekranlar (masalan, planshetlar) uchun */
+    @media (max-width: 768px) {
+        .button22 {
+            padding: 10px 18px;
+            font-size: 15px;
+        }
+    }
 </style>
+
 <body>
     <a href="/" class="tugma22"><button class="button22">Back</button></a>
 
     <div class="alls">
-        <img src="{% static 'assets/img2/003.jpg'%}" alt="kutib turing" class="allimg">
+        <!-- <img src="{% static 'assets/img2/003.jpg'%}" alt="kutib turing" class="allimg"> -->
         <h3 class="alh3">
             Фармацевт-провизор
         </h3>
         <p class="cltxt">Зарплата: по результатам собеседования
-
+            <br><br>
             Мы рады предложить работу в нашей аптечной сети!
-
+            <br><br>
             Каждому сотруднику мы гарантируем:
             - официальное трудоустройство и соблюдение ТКРУз
             - тренинги и курсы для повышения квалификации в собственном Учебном центре
-
+            <br><br>
             Обязанности:
             - консультации в рамках высоких стандартов сервиса для покупателей
             - соблюдение фармацевтического порядка
-
+            <br><br>
             Требования:
             - образование «Фармацевт» или «Провизор»
             - опыт работы с кассой и отличное знание ассортимента лекарственных препаратов
-
+            <br><br>
             Мы также рассматриваем кандидатов без опыта работы, но с желанием расти и развиваться в фармацевтической
             отрасли
-
+            <br><br>
             Если вас заинтересовала данная вакансия, пожалуйста, перезвоните нам по телефону: +998 (78) 298-00-88 или по
-            короткому номеру 1080</p>
+            короткому номеру 1080
+        </p>
+        <h3 class="alh3">
+            Оператор call-центра
+        </h3>
+        <p class="cltxt">
+            Зарплата: по результатам собеседования
+            <br><br>
+            Мы рады предложить работу в нашем call-центре!
+            <br><br>
+            Каждому сотруднику мы гарантируем:
+            - полное отсутствие холодных звонков
+            - официальное трудоустройство и соблюдение ТКРУз
+            - стабильная "белая" заработная плата с первого дня
+            <br><br>
+            Обязанности:
+            - принимать обращения клиентов (входящие телефонные звонки, а также в месенджере телеграм)
+            - консультировать клиентов по обращениям
+            - принимать в обработку жалобы и предложения
+            <br><br>
+            Требования:
+            - грамотный узбекский язык
+            - умение работать с большим количеством информации
+            - уверенная работа на компьютере
+            - знание ассортимента лекарственных препаратов будет преимуществом
+            <br><br>
+            Если вас заинтересовала данная вакансия, пожалуйста, перезвоните нам по телефону: +998 (78) 298-00-88 или по
+            короткому номеру 1080
+        </p>
     </div>
     <style>
         .alls {
@@ -82,6 +112,15 @@
             align-items: center;
             text-align: center;
             max-width: 100%;
+        }
+
+        .alh3 {
+            color: white;
+            background-color: #002d5c;
+            width: 100%;
+            text-align: center;
+            align-items: center;
+            height: 40px;
         }
 
         .allimg {
