--- a/templates/index.html
+++ b/templates/index.html
@@ -204,7 +204,7 @@
                                         </div>
                                         <div class="product_price">
                                             <br>
-                                            <span class="current_price">{{ product.price }} so'm</span><br>
+                                            <span class="current_price">{{ product.prices.0 }} so'm</span><br>
                                         </div>
                                         <div class="product_action">
                                             <ul style="display: flex; justify-content: center; align-items: center;">
