--- a/templates/index.html
+++ b/templates/index.html
@@ -189,7 +189,7 @@
                     <div class="row">
                         <div class="product_active owl-carousel">
                             {% for product in group.products %}
-                            {% set product = product_tuple.1 %} 
+                            {% with product = product_tuple.1 %} 
                             <div class="col-lg-3" style="height: auto;">
                                 <div class="single_product">
                                     <div class="product_thumb">
