--- a/static/assets/css/blog.css
+++ b/static/assets/css/blog.css
@@ -1,4 +1,5 @@
 /* Blog Styles */
+
 .blog-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -23,6 +24,7 @@
 
 .blog-card img {
     width: 100%;
+    min-width: 100%;
     height: 200px;
     object-fit: cover;
     display: block;
@@ -84,6 +86,7 @@
 
 .main-image {
     width: 100%;
+    min-width: 100%;
     border-radius: 10px;
     margin-bottom: 25px;
     height: 400px;
