--- a/static/assets/css/index.css
+++ b/static/assets/css/index.css
@@ -276,7 +276,7 @@
 }
 
 .product_action ul li.add_links {
-    margin: 0;
+    margin: 1px;
 }
 
 .product_action ul li.add_links a {
@@ -318,7 +318,9 @@
     background: #2196F3 !important;
     color: white !important;
     width: 100%;
-    display: block !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
     text-transform: capitalize;
     font-weight: 500;
     border-radius: 5px !important;
@@ -361,12 +363,15 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
+.blog_thumb {
+    padding: 1px;
+}
 .blog_thumb img {
     width: 100%;
-    height: 200px;
+    min-width: 100%;
+    height: auto;
     object-fit: cover;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-radius: 2px;
 }
 
 .blog_content {
