--- a/templates/blog/blog-details.html
+++ b/templates/blog/blog-details.html
@@ -1,4 +1,4 @@
-{% extends 'blog/blog_base.html'%}
+{% extends 'base.html'%}
 {% load static %}
 {% block content %}
     <link rel="stylesheet" href="{% static 'assets/css/blog.css' %}">
